feat(adaptation): wire trigger-3 hard-constraint + nutrition affected-set filters
Implement filterAffectedHardConstraints and filterAffectedNutrition on
AdaptationDataModelListener against the newly-landed published cross-module
seams (RecipeQueryService, HardConstraintFilterService, NutritionQueryService),
so a hard-constraints or nutrition-targets change now enqueues per-recipe
adaptation jobs for the recipes that actually violate the user's current state.
Budget stays a deliberate stub (no per-recipe cost data; plan-level constraint)
pending the grocery module. Filter methods made package-private and covered by
a real-Postgres IT proving both selection and non-selection.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>