@@ -3,11 +3,18 @@ package com.example.mealprep.adaptation.domain.service.internal;
 import com.example.mealprep.adaptation.api.dto.DataModelChangeType;
 import com.example.mealprep.adaptation.api.dto.DataModelJobRequest;
 import com.example.mealprep.adaptation.domain.service.AdaptationService;
+import com.example.mealprep.nutrition.domain.service.NutritionQueryService;
 import com.example.mealprep.nutrition.event.NutritionTargetsChangedEvent;
+import com.example.mealprep.preference.domain.service.HardConstraintFilterService;
 import com.example.mealprep.preference.event.HardConstraintsUpdatedEvent;
 import com.example.mealprep.provisions.event.BudgetChangedEvent;
+import com.example.mealprep.recipe.domain.service.RecipeQueryService;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import org.slf4j.Logger;
@@ -29,10 +36,13 @@ import org.springframework.transaction.event.TransactionalEventListener;
  * declared as REQUIRES_NEW or NOT_SUPPORTED"}. Since each listener body inserts jobs (writes), only
  * REQUIRES_NEW satisfies the rule.
  *
- * <p><b>Cross-module query-service helpers</b> ({@code findRecipesAffectedByPreferenceChange} etc.)
- * are referenced by the LLD but do not exist yet in 01d's dependency surface. The v1 fallback per
- * ticket §33 is to no-op (empty affected set) when filtering helpers are absent — leaves a
- * follow-up note for the relevant module to ship them. Worth user review.
+ * <p><b>Cross-module affected-recipe filters.</b> The hard-constraints and nutrition dimensions are
+ * now implemented (the recipe / preference / nutrition modules ship the raw-read + evaluation seams
+ * they need). Each re-evaluates the user's FULL current state via the relevant published {@code
+ * *QueryService} / {@code *FilterService} — slight over-selection vs the specific changed field is
+ * acceptable because the downstream LLM job is the real decision-maker and may emit {@code
+ * NO_CHANGE}. The budget dimension remains a deliberate stub pending the grocery module (no
+ * per-recipe cost data exists yet); see {@link #filterAffectedBudget}.
  */
 @org.springframework.stereotype.Component
 public class AdaptationDataModelListener {
@@ -40,9 +50,19 @@ public class AdaptationDataModelListener {
   private static final Logger LOG = LoggerFactory.getLogger(AdaptationDataModelListener.class);
 
   private final AdaptationService adaptationService;
+  private final RecipeQueryService recipeQueryService;
+  private final HardConstraintFilterService hardConstraintFilterService;
+  private final NutritionQueryService nutritionQueryService;
 
-  public AdaptationDataModelListener(AdaptationService adaptationService) {
+  public AdaptationDataModelListener(
+      AdaptationService adaptationService,
+      RecipeQueryService recipeQueryService,
+      HardConstraintFilterService hardConstraintFilterService,
+      NutritionQueryService nutritionQueryService) {
     this.adaptationService = adaptationService;
+    this.recipeQueryService = recipeQueryService;
+    this.hardConstraintFilterService = hardConstraintFilterService;
+    this.nutritionQueryService = nutritionQueryService;
   }
 
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT)
@@ -87,27 +107,72 @@ public class AdaptationDataModelListener {
     enqueue(event.userId(), DataModelChangeType.PROVISIONS_BUDGET, affected, event.traceId());
   }
 
-  // --- v1 affected-recipe filters (placeholders) -----------------------------------------------
+  // --- affected-recipe filters -----------------------------------------------------------------
 
   /**
-   * v1 placeholder. Real impl per LLD calls {@code
-   * preferenceQueryService.findRecipesContainingAllergen(userId, allergen)} for each changed
-   * allergen field. Returns empty set in 01d — preference module must ship the helper. <b>Follow-up
-   * filed.</b>
+   * Re-evaluates the user's active USER-catalogue recipes against their FULL current hard
+   * constraints and returns the recipeIds that now VIOLATE them.
+   *
+   * <p>We do not diff against the specific changed field on the event: a constraint change can
+   * interact (e.g. a new allergen plus an existing intolerance), so re-checking the whole aggregate
+   * is correct and cheap ({@link HardConstraintFilterService#filterRecipes} loads it once). The
+   * slight over-selection vs the literal changed field is acceptable — the downstream LLM
+   * adaptation job is the real decision-maker and may emit {@code NO_CHANGE}.
+   *
+   * <p>Empty when the user has no active recipes, or — because {@code filterRecipes} treats a user
+   * with no constraints aggregate as "everything passes" — when there are no hard constraints to
+   * violate.
+   *
+   * <p>Package-private (not {@code private}) so the same-package IT can assert selection /
+   * non-selection directly against the real cross-module beans; the
+   * {@code @TransactionalEventListener} entry points are awkward to drive deterministically in a
+   * test.
    */
-  private Set<UUID> filterAffectedHardConstraints(HardConstraintsUpdatedEvent event) {
-    return Collections.emptySet();
+  Set<UUID> filterAffectedHardConstraints(HardConstraintsUpdatedEvent event) {
+    UUID userId = event.userId();
+    Map<UUID, List<String>> recipeKeys = recipeQueryService.findUserRecipeIngredientKeys(userId);
+    if (recipeKeys.isEmpty()) {
+      return Set.of();
+    }
+    List<UUID> passing = hardConstraintFilterService.filterRecipes(userId, recipeKeys);
+    Set<UUID> affected = new LinkedHashSet<>(recipeKeys.keySet());
+    affected.removeAll(passing); // affected = recipes that VIOLATE the user's current constraints
+    return affected;
   }
 
   /**
-   * v1 placeholder. Real impl calls {@code nutritionQueryService.findRecipesViolatingTarget(...)}.
+   * Re-evaluates the user's active USER-catalogue recipes against their current nutrition targets
+   * and returns the recipeIds whose per-serving nutrition violates them, via the nutrition module's
+   * coarse v1 pre-filter ({@link NutritionQueryService#findRecipeIdsViolatingTargets}).
+   *
+   * <p>Empty when the user has no recipe with stored {@code nutrition_per_serving}, or when the
+   * user has no targets row (the pre-filter returns empty in that case).
+   *
+   * <p>Package-private for the same reason as {@link #filterAffectedHardConstraints}.
    */
-  private Set<UUID> filterAffectedNutrition(NutritionTargetsChangedEvent event) {
-    return Collections.emptySet();
+  Set<UUID> filterAffectedNutrition(NutritionTargetsChangedEvent event) {
+    UUID userId = event.userId();
+    Map<UUID, JsonNode> perRecipe = recipeQueryService.findUserRecipeNutrition(userId);
+    if (perRecipe.isEmpty()) {
+      return Set.of();
+    }
+    return nutritionQueryService.findRecipeIdsViolatingTargets(userId, perRecipe);
   }
 
-  /** v1 placeholder. Real impl calls {@code provisionsQueryService.findRecipesOverBudget(...)}. */
-  private Set<UUID> filterAffectedBudget(BudgetChangedEvent event) {
+  /**
+   * Deliberately deferred — always empty. Unlike hard-constraints and nutrition, the budget
+   * dimension cannot be evaluated per recipe in v1: there is <b>no per-recipe cost data</b> in the
+   * system. No grocery module / ingredient-pricing surface exists yet (see {@code
+   * tickets/grocery/01c-cost-projection-and-reference-price-source.md} and the rest of {@code
+   * tickets/grocery/}), so a recipe has no cost to compare against a budget.
+   *
+   * <p>It is also a <b>semantic mismatch</b>: a weekly budget is a <em>plan-level</em> constraint
+   * (a week of meals), not a per-meal-recipe attribute, so even with cost data this dimension would
+   * adapt the PLAN, not individual recipes. The Trigger-1 cost-discipline path that owns this is
+   * scoped in {@code tickets/adaptation/02b-trigger1-cost-discipline.md}. This is an intentional
+   * deferral, not a TODO-to-forget — re-enable only once the grocery cost seams land.
+   */
+  Set<UUID> filterAffectedBudget(BudgetChangedEvent event) {
     return Collections.emptySet();
   }
 
